--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <div class="holder"></div>
     <div id="legend"></div>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
     <footer>&copy The_Hyperboy</footer>
 </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
